Stretched picture on native browser fix

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -1101,6 +1101,12 @@ body{
     .form-group-sm{
       margin-top: 10px;
     }
+    .centerImage{
+      @media(orientation: portrait) and (min-width: @screen-xs-min) and (max-width: @screen-sm-max){
+        margin-left: 25%;
+        width: 50%;
+      }
+    }
   }
   .modal-footer{
     padding: 10px 15px;
